# ark-crypto-primitives

./: Cargo.toml
crypto-primitives/: Cargo.toml
crypto-primitives/src/crh/: byte_digest.rs  mod.rs
crypto-primitives/src/crh/blake3/: crh.rs
crypto-primitives/src/merkle_tree/configs/: mod.rs
