[workspace]
members = ["crypto-primitives", "macros"]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = [ "arkworks contributors" ]
description = "A library of useful cryptographic primitives"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/crypto-primitives"
documentation = "https://docs.rs/ark-crypto-primitives/"
keywords = ["gr1cs", "pedersen", "blake2s", "snark", "schnorr"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io]
ark-relations = { version = "0.5.0" }
ark-snark = { version = "0.5.0" }
ark-r1cs-std = { version = "0.5.0" }
# ark-relations = { path = "../snark/relations", default-features = true }
# ark-r1cs-std = { path = "../r1cs-std", default-features = true }

ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }

# [patch."https://github.com/arkworks-rs/snark"]
# ark-snark = { path = "../snark/snark", default-features = true }
# ark-relations = { path = "../snark/relations", default-features = true }

# [patch."https://github.com/arkworks-rs/r1cs-std"]
# ark-r1cs-std = { path = "../r1cs-std", default-features = true }